[ 1889954 ] Show Prerequisites for skills in GUI Issue#: 1889954
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@5164 ef53c05b-3124-4d59-ae7d-fe3273f42be7